add more changes

--- a/home.css
+++ b/home.css
@@ -63,6 +63,7 @@
 #intro{
     background: url(images/Earth.gif) no-repeat center;
     background-size:cover;
+    display:table;
     
   }
   h1,h2,h3,h4,h5,h6, p {
